--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -128,8 +128,18 @@ html {
 }
 
 .list li.drop-area {
-    padding: 2px 0 3px;
-    background-color: #0066FF;
+  position: relative;
+}
+
+.list li.drop-area::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #0066FF;
 }
 
 .sub-list-item .list li,
